Add changes to style forms

--- a/templates/app/experience_form.html
+++ b/templates/app/experience_form.html
@@ -23,10 +23,11 @@
 </button>
     <div 
         class = "
-            model experience-modal overflow-y-auto overflow-x-hidden fixed top-0 right-0
+            modal experience-modal overflow-y-auto overflow-x-hidden fixed top-0 right-0
             left-0 z-50 w-full md:inset-0 h-600 md:h-full flex justify-center items-center 
-            bg-gray-400 bg-opacity-50
+            bg-gray-600 bg-opacity-50
         " 
+        id="modal"
         aria-hidden="true">
         <div class = "relative p-4 w-full max-w-md h-full md:h-auto">
             <div 
@@ -52,47 +53,47 @@
             </div>
             <div class='tab'>
                 {{ form.non_field_errors }}
-                <div class="fieldWrapper">
+                <div class="fieldWrapper input-container">
                     {{ form.name.errors }}
-                    <label for="id_name">Experience Name:</label>
+                    <label for="id_name" class="input-label">Experience Name:</label>
                     {{ form.name }}
                 </div>
-                <div class="fieldWrapper">
+                <div class="fieldWrapper input-container">
                     {{ form.type.errors }}
-                    <label for="id_type">Type of Experience:</label>
+                    <label for="id_type" class="input-label">Type of Experience:</label>
                     {{ form.type }}
                 </div>
-                <div class="fieldWrapper other-class">
+                <div class="fieldWrapper input-container">
                     {{ form.start_date.errors }}
-                    <label for="id_start_date">Start Date:</label>
+                    <label for="id_start_date" class="input-label">Start Date:</label>
                     {{ form.start_date }}
                 </div>
-                <div class="fieldWrapper other-class">
+                <div class="fieldWrapper input-container">
                     {{ form.end_date.errors }}
-                    <label for="id_end_date">End Date:</label>
+                    <label for="id_end_date" class="input-label">End Date:</label>
                     {{ form.end_date }}
                 </div>
             </div>
             <div class="tab">
-                <div class="fieldWrapper other-class">
+                <div class="fieldWrapper input-container">
                     {{ form.description.errors }}
-                    <label for="id_description">Description of Experience:</label>
+                    <label for="id_description" class="input-label">Description of Experience:</label>
                     {{ form.description }}
                 </div>
-                <div class="fieldWrapper other-class">
+                <div class="fieldWrapper input-container">
                     {{ form.project_link.errors }}
-                    <label for="id_project_link">Project Link:</label>
+                    <label for="id_project_link" class="input-label">Project Link:</label>
                     {{ form.project_link }}
                 </div>
-                <div class="fieldWrapper other-class">
+                <div class="fieldWrapper input-container">
                     {{ form.image.errors }}
-                    <label for="id_image">Image:</label>
+                    <label for="id_image" class="input-label">Image:</label>
                     {{ form.image }}
             </div>
             <div class="tab">
-                <div class="fieldWrapper">
+                <div class="fieldWrapper input-container">
                     {{ form.skills.errors }}
-                    <label for="id_skills">Skills Involved:</label>
+                    <label for="id_skills" class="input-label">Skills Involved:</label>
                     {{ form.skills }}
                 </div>
             </div>
