tried to fixed merge issues

--- a/templates/app/auth_page.html
+++ b/templates/app/auth_page.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="w-full h-full flex justify-center items-center">
   <div
-  class="flex justify-center items-center flex-col rounded-xl w-fit bg-dark"
+  class="flex justify-center items-center flex-col rounded-xl w-fit bg-foreground"
   >
     <!-- show the error message here -->
     {% if messages %}
