--- a/templates/components/node_side_bar.html
+++ b/templates/components/node_side_bar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div id="nsb" class="bg-foreground p-4 max-w-md w-96 min-h-full fixed right-0 translate-x-full transition-transform duration-300">
+<div id="nsb" class="bg-darker-blue p-4 max-w-md w-96 min-h-full fixed right-0 translate-x-full transition-transform duration-300">
   <header class="flex justify-between items-center">
     <div class="flex items-center overflow-x-scroll">
       <img id="nsb_image" src="{% static 'images/python_logo.png' %}" alt="Icon" class="h-8 w-8">
