add first name and last name to the register page, plus some styling as well
Since signal links user to profile, i just add first name and last name to the signal, so that when user is created, the names are actually there, instead of default John Doe again... Besides, I fix the styling in login and register page.

--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -239,7 +239,7 @@
   --secondary: #ae8fdf;
   --white: #fff;
   --black: #000;
-  --rice-white: #f1faee;
+  --rice-white: rgb(203 213 225);
   --background: #00141C;
   --success: #43d678;
   --active: #559cde;
