--- a/templates/app/setting.html
+++ b/templates/app/setting.html
@@ -137,4 +137,9 @@
       }
       $(".post-form")[0].reset(); // this is to reset the form 
   </script>
+     
+  <script>
+    comment = document.getElementById('id_bio');
+    comment.removeAttribute('required');
+  </script>
 {% endblock content %}
