--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -7,6 +7,9 @@
   <ul
     class="flex justify-end items-center my-0 mx-auto w-11/12 h-full text-rice-white list-none"
   >
+    <li class="mx-10 cursor-pointer opacity-100">
+      {% include 'components/search_bar.html' %}
+    </li>
     <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
       <a href="{% url 'landing_page' %}#how_it_works">How it Works</a>
     </li>
@@ -41,6 +44,9 @@
       </li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
         <a href="{% url 'landing_page' %}#how_it_works">How it Works</a>
+      </li>
+      <li class="mx-10 cursor-pointer opacity-100">
+        {% include 'components/search_bar.html' %}
       </li>
     </ul>
     <!-- end of links -->
