--- a/templates/app/experience_form.html
+++ b/templates/app/experience_form.html
@@ -31,8 +31,9 @@
         " 
         id="experience-input-modal"
         aria-hidden="true"
-        style="display: none">
-        <div class = "relative p-4 w-[500px] max-w-md h-[600px] bg-co">
+        style="">
+        {% comment %} display: none {% endcomment %}
+        <div class = "relative p-4 w-[500px] max-w-md h-[700px] bg-co">
             <div 
                 class="modal-content border-4 shadow-lg relative flex 
                 flex-col h-full pointer-events-auto bg-clip-padding 
@@ -53,62 +54,67 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                     </svg>
             </div>
-            <div class="w-full h-full mt-3">
+            <div class="w-full h-full pt-3 overflow-hidden block">
                 {% comment %} Add overflow hidden to this parent {% endcomment %}
                 {% comment %} then in js prev/next translates ALL tabs by width of parent component? {% endcomment %}
-                <div class='tab absolute w-full'>
-                    {{ form.non_field_errors }}
-                    <div class="fieldWrapper input-container w-full p-5 mx-0">
-                        {{ form.name.errors }}
-                        <label for="id_name" class="input-label">Experience Name:</label>
-                        {{ form.name }}
-                    </div>
-                    <div class="fieldWrapper input-container w-full p-5 mx-0">
-                        {{ form.type.errors }}
-                        <label for="id_type" class="input-label">Type of Experience:</label>
-                        {{ form.type }}
-                    </div>
-                    <div class="fieldWrapper input-container flex block w-full p-5 mx-0">
-                        {{ form.start_date.errors }}
-                        <label for="id_start_date" class="input-label">Start Date:</label>
-                        {{ form.start_date }}
-                    </div>
-                    <div class="fieldWrapper input-container flex block w-full p-5 mx-0">
-                        {{ form.end_date.errors }}
-                        <label for="id_end_date" class="input-label">End Date:</label>
-                        {{ form.end_date }}
+                <div class='tab w-full flex flex-col h-full inline-block static'>
+                    <div class="w-full max-h-full flex flex-col">
+                        {{ form.non_field_errors }}
+                        <div class="fieldWrapper input-container w-full p-5 mx-0">
+                            {{ form.name.errors }}
+                            <label for="id_name" class="input-label">Experience Name:</label>
+                            {{ form.name }}
+                        </div>
+                        <div class="fieldWrapper input-container w-full p-5 mx-0">
+                            {{ form.type.errors }}
+                            <label for="id_type" class="input-label">Type of Experience:</label>
+                            {{ form.type }}
+                        </div>
+                        <div class="fieldWrapper input-container flex block w-full p-5 mx-0">
+                            {{ form.start_date.errors }}
+                            <label for="id_start_date" class="input-label">Start Date:</label>
+                            {{ form.start_date }}
+                        </div>
+                        <div class="fieldWrapper input-container flex block w-full p-5 mx-0">
+                            {{ form.end_date.errors }}
+                            <label for="id_end_date" class="input-label">End Date:</label>
+                            {{ form.end_date }}
+                        </div>
                     </div>
                 </div>
-                {% comment %} <div class="tab absolute ">
-                    <div class="fieldWrapper input-container">
-                        {{ form.description.errors }}
-                        <label for="id_description" class="input-label">Description of Experience:</label>
-                        {{ form.description }}
+                <div class="tab w-full max-h-full absolute">
+                    <div class="w-full max-h-full flex flex-col">
+                        <div class="fieldWrapper input-container">
+                            {{ form.description.errors }}
+                            <div class="input-label absolute top-[-18px]">Description of Experience:</div>
+                            {{ form.description }}
+                        </div>
+                        <div class="fieldWrapper input-container w-full p-5 mx-0">
+                            {{ form.project_link.errors }}
+                            <label for="id_project_link" class="input-label">Project Link:</label>
+                            {{ form.project_link }}
+                        </div>
+                        <div class="fieldWrapper input-container w-full p-5 mx-0">
+                            {{ form.image.errors }}
+                            <label for="id_image" class="input-label">Image:</label>
+                            {{ form.image }}
+                        </div>
                     </div>
-                    <div class="fieldWrapper input-container">
-                        {{ form.project_link.errors }}
-                        <label for="id_project_link" class="input-label">Project Link:</label>
-                        {{ form.project_link }}
-                    </div>
-                    <div class="fieldWrapper input-container">
-                        {{ form.image.errors }}
-                        <label for="id_image" class="input-label">Image:</label>
-                        {{ form.image }}
                 </div>
-                <div class="tab absolute ">
+                <div class="tab inline-block">
                     <div class="fieldWrapper input-container">
                         {{ form.skills.errors }}
                         <label for="id_skills" class="input-label">Skills Involved:</label>
                         {{ form.skills }}
                     </div>
-                </div> {% endcomment %}
-            </div>
-            <div>
-                <div class="flex justify-center">
-                <button type="button" class="tech-tag tech-tag-blue min-w-[100px] p-2" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-                <button type="button" class="tech-tag tech-tag-blue min-w-[100px] p-2" id="nextBtn"  onclick="nextPrev(1)">Next</button>
                 </div>
             </div>
+                <div>
+                    <div class="flex justify-center">
+                    <button type="button" class="tech-tag tech-tag-blue min-w-[100px] p-2" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
+                    <button type="button" class="tech-tag tech-tag-blue min-w-[100px] p-2" id="nextBtn"  onclick="nextPrev(1)">Next</button>
+                    </div>
+                </div>
             </div>
             <p><input type="submit" value="Submit" /></p>
             </div>
