--- a/templates/app/experience_form.html
+++ b/templates/app/experience_form.html
@@ -31,9 +31,8 @@
         " 
         id="experience-input-modal"
         aria-hidden="true"
-        style="">
-        {% comment %} display: none {% endcomment %}
-        <div class = "relative p-4 w-[500px] max-w-md h-[700px] bg-co">
+        style="display: none ">
+        <div class = "relative w-[450px] max-w-md h-[700px]">
             <div 
                 class="modal-content border-4 shadow-lg relative flex 
                 flex-col h-full pointer-events-auto bg-clip-padding 
@@ -53,70 +52,76 @@
                     fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                     </svg>
-            </div>
-            <div class="w-full h-full pt-3 overflow-hidden block">
-                {% comment %} Add overflow hidden to this parent {% endcomment %}
-                {% comment %} then in js prev/next translates ALL tabs by width of parent component? {% endcomment %}
-                <div class='tab w-full flex flex-col h-full inline-block static'>
-                    <div class="w-full max-h-full flex flex-col">
-                        {{ form.non_field_errors }}
-                        <div class="fieldWrapper input-container w-full p-5 mx-0">
-                            {{ form.name.errors }}
-                            <label for="id_name" class="input-label">Experience Name:</label>
-                            {{ form.name }}
-                        </div>
-                        <div class="fieldWrapper input-container w-full p-5 mx-0">
-                            {{ form.type.errors }}
-                            <label for="id_type" class="input-label">Type of Experience:</label>
-                            {{ form.type }}
-                        </div>
-                        <div class="fieldWrapper input-container flex block w-full p-5 mx-0">
-                            {{ form.start_date.errors }}
-                            <label for="id_start_date" class="input-label">Start Date:</label>
-                            {{ form.start_date }}
-                        </div>
-                        <div class="fieldWrapper input-container flex block w-full p-5 mx-0">
-                            {{ form.end_date.errors }}
-                            <label for="id_end_date" class="input-label">End Date:</label>
-                            {{ form.end_date }}
-                        </div>
-                    </div>
                 </div>
-                <div class="tab w-full max-h-full absolute">
-                    <div class="w-full max-h-full flex flex-col">
+                <div class="w-full h-full pt-3 overflow-hidden block whitespace-nowrap">
+                    {% comment %} Add overflow hidden to this parent {% endcomment %}
+                    {% comment %} then in js prev/next translates ALL tabs by width of parent component? {% endcomment %}
+                    <div 
+                    class='tab w-full h-full inline-block align-top whitespace-normal 
+                    transition duration-300'>
+                        <div class="w-full max-h-full flex flex-col">
+                            {{ form.non_field_errors }}
+                            <div class="fieldWrapper input-container w-full p-5 mx-0">
+                                {{ form.name.errors }}
+                                <label for="id_name" class="input-label">Experience Name:</label>
+                                <div>
+                                    {{ form.name }}
+                                </div>
+                            </div>
+                            <div class="fieldWrapper input-container w-full p-5 mx-0">
+                                {{ form.type.errors }}
+                                <label for="id_type" class="input-label">Type of Experience:</label>
+                                {{ form.type }}
+                            </div>
+                            <div class="fieldWrapper input-container flex block w-full p-5 mx-0">
+                                {{ form.start_date.errors }}
+                                <label for="id_start_date" class="input-label">Start Date:</label>
+                                {{ form.start_date }}
+                            </div>
+                            <div class="fieldWrapper input-container flex block w-full p-5 mx-0">
+                                {{ form.end_date.errors }}
+                                <label for="id_end_date" class="input-label">End Date:</label>
+                                {{ form.end_date }}
+                            </div>
+                        </div>
+                    </div><div 
+                    class="tab w-full h-full max-h-full inline-block align-top whitespace-normal
+                    transition duration-300">
+                        <div class="w-full max-h-full flex flex-col">
+                            <div class="fieldWrapper input-container">
+                                {{ form.description.errors }}
+                                <div class="input-label absolute top-[-18px]">Description of Experience:</div>
+                                {{ form.description }}
+                            </div>
+                            <div class="fieldWrapper input-container w-full p-5 mx-0">
+                                {{ form.project_link.errors }}
+                                <label for="id_project_link" class="input-label">Project Link:</label>
+                                {{ form.project_link }}
+                            </div>
+                            <div class="fieldWrapper input-container w-full p-5 mx-0">
+                                {{ form.image.errors }}
+                                <label for="id_image" class="input-label">Image:</label>
+                                {{ form.image }}
+                            </div>
+                        </div>
+                    </div><div 
+                    class="tab inline-block w-full h-full whitespace-normal align-top
+                    transition duration-300">
                         <div class="fieldWrapper input-container">
-                            {{ form.description.errors }}
-                            <div class="input-label absolute top-[-18px]">Description of Experience:</div>
-                            {{ form.description }}
-                        </div>
-                        <div class="fieldWrapper input-container w-full p-5 mx-0">
-                            {{ form.project_link.errors }}
-                            <label for="id_project_link" class="input-label">Project Link:</label>
-                            {{ form.project_link }}
-                        </div>
-                        <div class="fieldWrapper input-container w-full p-5 mx-0">
-                            {{ form.image.errors }}
-                            <label for="id_image" class="input-label">Image:</label>
-                            {{ form.image }}
+                            {{ form.skills.errors }}
+                            <div class="input-label absolute top-[-18px]">Skills Involved:</div>
+                            {{ form.skills }}
                         </div>
                     </div>
                 </div>
-                <div class="tab inline-block">
-                    <div class="fieldWrapper input-container">
-                        {{ form.skills.errors }}
-                        <label for="id_skills" class="input-label">Skills Involved:</label>
-                        {{ form.skills }}
-                    </div>
-                </div>
-            </div>
                 <div>
                     <div class="flex justify-center">
-                    <button type="button" class="tech-tag tech-tag-blue min-w-[100px] p-2" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-                    <button type="button" class="tech-tag tech-tag-blue min-w-[100px] p-2" id="nextBtn"  onclick="nextPrev(1)">Next</button>
+                    <button type="button" class="tech-tag tech-tag-blue min-w-[100px] p-2" id="prevBtn" onclick="translateRightByWidth('tab')">Previous</button>
+                    <button type="button" class="tech-tag tech-tag-blue min-w-[100px] p-2" id="nextBtn"  onclick="translateLeftByWidth('tab', 2)">Next</button>
                     </div>
                 </div>
             </div>
-            <p><input type="submit" value="Submit" /></p>
+            <input class="modal-content rounded-md border-4 w-[450px] max-w-md" type="submit" value="Submit"/>
             </div>
         </div>
     </div>
