--- a/templates/components/search_bar.html
+++ b/templates/components/search_bar.html
@@ -14,7 +14,7 @@
         {% csrf_token %}
         <input type="hidden" name="search_scope" id="search_scope" value="all">
         <label for="search_query" class="absolute w-0 overflow-hidden opacity-0">Search</label>
-        <input type="search" name="search_query" id="search_query"
+        <input type="search" autocomplete="off" name="search_query" id="search_query"
         placeholder="Search"
         class="bg-transparent focus-visible:outline-none pl-10 pr-6 w-full"
         >
