Functional Project list and Modal

--- a/templates/app/experience_form.html
+++ b/templates/app/experience_form.html
@@ -69,9 +69,9 @@
                                 </div>
                             </div>
                             <div class="fieldWrapper input-container w-full p-5 mx-0">
-                                {{ form.type.errors }}
+                                {{ form.kind.errors }}
                                 <label for="id_type" class="input-label">Type of Experience:</label>
-                                {{ form.type }}
+                                {{ form.kind }}
                             </div>
                             <div class="fieldWrapper input-container flex block w-full p-5 mx-0">
                                 {{ form.start_date.errors }}
