--- a/templates/base.html
+++ b/templates/base.html
@@ -26,5 +26,6 @@
     {% block content %}
     {% endblock content %}
     <script src={% static 'js/Modal.js' %}></script>
+    <script src={%static '/js/project_list_descrption.js' %}></script>
   </body>
 </html>
