--- a/templates/components/project_list.html
+++ b/templates/components/project_list.html
@@ -7,16 +7,22 @@
 {% endblock headers %}
 
 {% block content %}
-<div class="projectsListContainer text-rice-white border-2 border-gray-600 rounded-lg m-1.5">
-    <div class="projectListHeader grid grid-cols-3 gap-4 bg-[#00171F] rounded-t-lg">
+<div class='h-[90%]'>
+<div 
+class=
+"projectsListContainer h-full text-rice-white border-2 
+border-gray-600 rounded-lg m-1.5 overflow-y-auto">
+    <div 
+    class="projectListHeader grid grid-cols-3 mx-0 bg-[#00171F] 
+    rounded-md border-2 p-4">
         {% include "components/project_list_header.html" %}
     </div>
-    <div class="projectListCardsContainer">
-        {% comment %} {{projectList}} {% endcomment %}
-        {% for project in projectList %}
-            {% include "components\project_list_card.html" with project=project %}
+    <div class="projectListCardsContainer mt-3">
+        {% for experience in experiences %}
+            {% include "components\project_list_card.html" with project=experience %}
         {% endfor %}
     </div>
+</div>
 </div>
 {% endblock content %}
 
