--- a/templates/components/project_list_header.html
+++ b/templates/components/project_list_header.html
@@ -1,10 +1,10 @@
 {% load static %}
-<div class="project-name">
-    <h2>Project Name</h2>
+<div class="project-name flex justify-center">
+    <h4>Experience Name</h4>
 </div>
-<div class="Likes">
-    <h2>Likes</h2>
+<div class="Likes flex justify-center">
+    <h4>Likes</h4>
 </div>
-<div class="date">
-    <h2>Date Created</h2>
+<div class="date flex justify-center">
+    <h4>Date Created</h4>
 </div>
