--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -37,7 +37,7 @@
     <!-- links: logo, how, about -->
     <ul class="flex justify-start items-center h-20">
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url 'landing_page' %}">Logo</a>
+        <a href="{% url 'dashboard_page' %}">Logo</a>
       </li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
         <a href="{% url 'landing_page' %}#about_us">About Us</a>
