--- a/templates/app/profile.html
+++ b/templates/app/profile.html
@@ -5,8 +5,8 @@
 
   {% include "components/sidemenu.html" %}
 
-  <div class="col-span-10 bg-background h-full space-y-4">
-      <div id="profile" class="flex items-center justify-center space-x-10 pt-9">
+  <div class="col-span-10 bg-background h-full space-y-4 p-14">
+      <div id="profile" class="flex items-center justify-center space-x-10">
         <div id="pic-container" class="w-52">
           <img src="{{request.user.profile.image.url}}" alt="" class="w-full h-52 object-cover object-top rounded-full border-2">
         </div>
@@ -33,51 +33,66 @@
         </div>
         <div id="add-info" class="border-2 rounded-xl p-5 space-y-3">
           <h4>Extra Info</h4>
-          <div id="created-time">
+          <div>
             <p>📅 Member since {{request.user.profile.date_created}} </p>
-          </div>
-          <div id="num-exp">
             <p>🔥 Number of experience: 4</p>
           </div>
         </div>
 
         <div id="email" class="border-2 rounded-xl p-5 space-y-3">
           <h4>Email</h4>
-          <p class="break-words">{{request.user.profile.email}}</p>
+          <p class="break-words">
+            {% if request.user.profile.email %}
+              {{request.user.profile.email}}
+            {% else %}
+              Don't forget your email 🥺
+            {% endif %}
+          </p>
         </div>
 
         <!-- hover:bg-slate-300 hover:text-black hover:-translate-y-0.5 transform transition: animation if needed -->
         <div id="social-links" class="border-2 rounded-xl p-5 space-y-3">
           <h4>Social</h4>
-          <ul class="grid grid-cols-2 gap-2">
-            <!-- if twitter_link exist -->
-
-            <!--end if -->
-            <a href="" class="flex items-center w-4/6 hover:-translate-y-0.5 transform transition opacity-50 hover:opacity-100">
-              {% include 'icons/twitter.html' with class="h-8 w-8 mr-2 fill-white" %}  
-              <li>
-                Twitter
-              </li>
-            </a>
-            <a href="" class="flex items-center w-4/6 hover:-translate-y-0.5 transform transition opacity-50 hover:opacity-100">
-              {% include 'icons/linkedin.html' with class="h-8 w-8 mr-2 fill-white " %}  
-              <li>
-                Linkedin
-              </li>
-            </a>
-            <a href="" class="flex items-center w-4/6 hover:-translate-y-0.5 transform transition opacity-50 hover:opacity-100">
-              {% include 'icons/github.html' with class="h-8 w-8 mr-2 fill-white" %}
-              <li>
-                Github
-              </li>
-            </a>
-            <a href="" class="flex items-center w-4/6 hover:-translate-y-0.5 transform transition opacity-50 hover:opacity-100">
-              {% include 'icons/website.html' with class="h-8 w-8 mr-2 fill-white"  %} 
-              <li>
-                Website
-              </li>
-            </a>
-          </ul>
+          {% if profile.twitter or profile.linkedin or profile.github or profile.website %}
+            <ul class="grid grid-cols-2 gap-2">
+              <!-- if twitter_link exist -->
+              <!--end if -->
+              {% if profile.twitter %}
+                <a href="{{profile.twitter}}" target="_blank" class="flex items-center w-4/6 hover:-translate-y-0.5 transform transition opacity-50 hover:opacity-100">
+                  {% include 'icons/twitter.html' with class="h-8 w-8 mr-2 fill-white" %}  
+                  <li>
+                    Twitter
+                  </li>
+                </a>
+              {% endif %}
+              {% if profile.linkedin %}
+                <a href="{{profile.linkedin}}" target="_blank" class="flex items-center w-4/6 hover:-translate-y-0.5 transform transition opacity-50 hover:opacity-100">
+                  {% include 'icons/linkedin.html' with class="h-8 w-8 mr-2 fill-white " %}  
+                  <li>
+                    Linkedin
+                  </li>
+                </a>
+              {% endif %}
+              {% if profile.github %}
+                <a href="{{profile.github}}" target="_blank" class="flex items-center w-4/6 hover:-translate-y-0.5 transform transition opacity-50 hover:opacity-100">
+                  {% include 'icons/github.html' with class="h-8 w-8 mr-2 fill-white" %}
+                  <li>
+                    Github
+                  </li>
+                </a>
+              {% endif %}
+              {% if profile.website %}
+                <a href="{{profile.website}}" target="_blank" class="flex items-center w-4/6 hover:-translate-y-0.5 transform transition opacity-50 hover:opacity-100">
+                  {% include 'icons/website.html' with class="h-8 w-8 mr-2 fill-white"  %} 
+                  <li>
+                    Website
+                  </li>
+                </a>
+              {% endif %}
+            </ul>
+          {% else %}
+            <p>Add your online precense in settings🤩🤩</p>
+          {% endif %}
         </div>
 
       </div>
