--- a/templates/app/setting.html
+++ b/templates/app/setting.html
@@ -8,9 +8,12 @@
 {% block content %}
 <div class="grid grid-cols-12">
   {% include "components/sidemenu.html" %}
-
   <div class="col-span-10 bg-background h-full">
-    <div id="container" class="flex items-center justify-center">
+    <div id="container" class="flex flex-col items-center justify-center py-14">
+      <div class="lg:space-y-6 text-center">
+        <h3>Settings</h3>
+        <p>Update your photo and personal detials</p>
+      </div>
       <form method="POST" enctype="multipart/form-data" class="mx-20 my-5 lg:space-y-8 w-3/5 h-full">
         {% csrf_token %}
         {% if messages %}
@@ -25,9 +28,6 @@
             <label for="id_first_name" class="text-[25px]">
               {{setting_form.first_name.label | title}}
             </label>
-            <p>
-              Tell us your first name.
-             </p>
           </div>
           {{setting_form.first_name}}
         </div>
@@ -36,9 +36,6 @@
             <label for="id_last_name" class="text-[25px]">
               {{setting_form.last_name.label | title}}
             </label>
-            <p>
-              Tell us your last name.
-             </p>
           </div>
           {{setting_form.last_name}}
         </div>
@@ -47,20 +44,47 @@
             <label for="id_email" class="text-[25px]">
               {{setting_form.email.label | title}}
             </label>
-            <p>
-              Update your email here.
-             </p>
           </div>
           {{setting_form.email}}
+        </div>
+        <div class="form-group border-2 rounded-xl p-5">
+          <div class="space-y-2">
+            <label for="id_bio" class="text-[25px]">
+              {{setting_form.twitter.label | title}}
+            </label>
+          </div>
+          {{setting_form.twitter}}
+        </div>
+        <div class="form-group border-2 rounded-xl p-5">
+          <div class="space-y-2">
+            <label for="id_bio" class="text-[25px]">
+              {{setting_form.github.label | title}}
+            </label>
+          </div>
+          {{setting_form.github}}
+        </div>
+        <div class="form-group border-2 rounded-xl p-5">
+          <div class="space-y-2">
+            <label for="id_bio" class="text-[25px]">
+              {{setting_form.linkedin.label | title}}
+            </label>
+          </div>
+          {{setting_form.linkedin}}
+        </div>
+        <div class="form-group border-2 rounded-xl p-5">
+          <div class="space-y-2">
+            <label for="id_bio" class="text-[25px]">
+              {{setting_form.website.label | title}}
+            </label>
+          </div>
+          {{setting_form.website}}
         </div>
         <div class="form-group border-2 rounded-xl p-5">
           <div class="space-y-2">
             <label for="id_image" class="text-[25px]">
               {{setting_form.image.label | title}}
             </label>
-            <p>
-              Update your image here.
-             </p>
+            
           </div>
           <div id="pic-container" class="w-44">
             <img src="{{request.user.profile.image.url}}" alt="profile.img" class="w-full h-44 object-cover object-top border-2 rounded-full m-2">
@@ -72,53 +96,11 @@
             <label for="id_bio" class="text-[25px]">
               {{setting_form.bio.label | title}}
             </label>
-            <p>
-              Update your biography here.
-             </p>
           </div>
           {{setting_form.bio}}
         </div>
+
         <button type="submit" class="button">Save</button>
-        
-        <!--
-        <div class="border-2 rounded-xl p-5">
-          <div class="space-y-2">
-            <label for="email" class="text-[25px]">Update your email address</label>
-            <p>
-              Change the email address you want to associate with your account.
-             </p>
-          </div>  
-          <div class="space-y-2">
-            <input 
-            id="id_email" 
-            name="email" 
-            type="email" 
-            maxlength="254" 
-            value="{{request.user.profile.email}}" 
-            placeholder="Write your email here" 
-            class="peer input my-4 px-3 placeholder-gray-500"
-            />
-            
-          </div>
-        </div>
-        <div class="border-2 rounded-xl p-5 space-y-4">
-          <div id="pic-container" class="w-44">
-            <img src="{{request.user.profile.image.url}}" alt="profile.img" class="w-full h-44 object-cover object-top border-2 rounded-full">
-          </div>
-          <label for="image_input" class=" cursor-pointer text-[25px]">Update your image</label>
-          <div class="space-x-4">
-            <input id="image_input" name="image" type="file" class="block w-full text-sm "/>
-          </div>
-        </div>
-  
-        <div class="border-2 rounded-xl p-5">
-          <div class="space-y-2">
-            <label for="bio" class="text-[25px]">Update your biography</label>
-            <p class="">Tell me about yourself</p>
-          </div>
-          <textarea name="bio" id="bio" class="input bg-transparent border-2 rounded-xl overflow-hidden min-h-[100px] my-4 px-3 resize-none box-border w-full">{{request.user.profile.bio}}</textarea>
-        </div>
-      -->
       </form>
     </div>
     <!-- The container for setting card -->
@@ -135,11 +117,7 @@
       function fade_out() {
           $(".messages").fadeOut().empty();
       }
-      $(".post-form")[0].reset(); // this is to reset the form 
   </script>
-     
-  <script>
-    comment = document.getElementById('id_bio');
-    comment.removeAttribute('required');
-  </script>
+
+
 {% endblock content %}
