--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -70,6 +70,23 @@
       focus:outline-none;
     background-color: var(--background)
   }
+
+  input[type="range"] {
+    @apply 
+      appearance-none
+      w-full h-3
+      bg-[#3d488b]
+      rounded-full
+    ;
+  }
+
+  input[type="range"]::-webkit-slider-thumb, input[type="range"]::-moz-range-thumb {
+    @apply appearance-none w-5 h-5 rounded-full bg-primary cursor-pointer border-none;
+  }
+
+  input[type="range"]::-moz-range-progress, input[type="range"]::-webkit-slider-runnable-track {
+    @apply bg-secondary h-full rounded-full;
+  }
 }
 
 @tailwind components;
