--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -9,7 +9,7 @@
 <div class="grid grid-cols-12 h-full">
     {% include "components/sidemenu.html" %}
 
-    <div id="treeContainer" class="col-span-10 h-full bg-background">
+    <div id="treeContainer" class="col-span-10 h-full bg-background relative overflow-hidden">
         {% include 'components/node_side_bar.html' %}
     </div>
 </div>
