--- a/templates/components/node_side_bar.html
+++ b/templates/components/node_side_bar.html
@@ -1,8 +1,8 @@
 {% load static %}
 
-<div id="nsb" class="bg-darker-blue p-4 max-w-md w-96 min-h-full fixed right-0 translate-x-full transition-transform duration-300">
+<div id="nsb" class="bg-darker-blue p-4 max-w-md w-96 min-h-full absolute h-full top-0 right-0 translate-x-full transition-transform duration-300">
   <header class="flex justify-between items-center">
-    <div class="flex items-center overflow-x-scroll">
+    <div class="flex items-center overflow-auto grow flex-1 w-full">
       <img id="nsb_image" src="{% static 'images/python_logo.png' %}" alt="Icon" class="h-8 w-8">
       <h4 id="nsb_name" class="ml-2 text-[25px]">Node Name</h4>
     </div>
@@ -12,13 +12,43 @@
   </header>
   <section class="my-5">
     <!-- proficiency -->
-    <p class="text-sm">Proficiency: <span id="nsb_proficiency_text">Able to Use Professionally</span></p>
-    <div class="w-full h-3 bg-[#3d488b] rounded-xl overflow-hidden">
-      <div id="nsb_proficiency_bar" class="h-full bg-secondary rounded-xl transition-all duration-200"></div>
+    <div class="flex items-center mb-2">
+      <span class="text-base">
+        Proficiency: 
+      </span>
+      <div 
+        id="nsb_proficiency_toggle"
+        class="relative ml-3 bg-background p-2 rounded-md flex items-center justify-between cursor-pointer">
+        <span id="nsb_proficiency_text" class="text-base line-clamp-1 flex-1 grow shrink mr-2">Able to Use Professionally</span>
+        <svg id="nsb_proficiency_arrow" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 rotate-180 transition-transform duration-150" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
+        </svg>
+        <div
+          data-active="false"
+          id="nsb_proficiency_menu"
+          class="absolute top-full right-0 left-0 text-base bg-foreground translate-y-2 rounded-md origin-top text-left scale-y-0 transition-transform duration-150">
+          <ul class="p-2 select-none">
+            <li>Aiming to Learn</li>
+          </ul>
+        </div>
+      </div>
+      <!-- <svg id="nsb_save_proficiency" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-success cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
+      </svg>
+      <svg id="" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 cursor-pointer text-gray-500 hover:text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+      </svg> -->
     </div>
+    <div class="w-full h-3 bg-[#3d488b] rounded-full overflow-hidden">
+      <div id="nsb_proficiency_bar" class="h-full bg-secondary rounded-full transition-all duration-200">
+      </div>
+    </div>
+    <!-- <div>
+      <input type="range" name="" id="" min="0" max="100">
+    </div> -->
   </section>
-  <main class="grid grid-cols-1 grid-rows-6 gap-4">
-    <section class="row-span-2 col-span-1">
+  <main>
+    <section class="my-4">
       <div class="flex justify-between items-center">
         <h4 class="mb-3 text-[25px]">Description</h4>
       <div class="flex items-center">
@@ -44,19 +74,19 @@
           class="w-full bg-background p-4 rounded-lg max-h-72 resize-none outline-none focus-visible:outline-2 focus-visible:outline-white"></textarea>
       </form>
     </section>
-    <section class="row-span-4 col-span-1">
+    <section class="my-4">
       <div class="">
         <h4 class="mb-3 text-[25px]">Experiences</h4>
       </div>
-      <div class="h-1/2">
-        <ul id="nsb_experience_list" class="overflow-y-scroll h-full">
+      <div class="max-h-[400px]">
+        <ul id="nsb_experience_list" class="overflow-y-auto h-full">
           <li id="nsb_experience_base" class="my-2 hidden">
             <a id="nsb_experience_link" data-experience-id="" data-experience-href="" href="" class="hover:text-[#6482FF] hover:bg-background rounded-lg flex items-center py-2
             px-3 transition-colors duration-75 text-lg">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-primary mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
               </svg>
-              <span id="nsb_experience_name" class="font-medium">Experience Name</span>
+              <span id="nsb_experience_name" class="font-medium line-clamp-1 flex-1 grow shrink">Experience Name</span>
             </a>
           </li>
         </ul>
@@ -64,7 +94,5 @@
     </section>
   </main>
 </div>
-<script>
-</script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{% static 'js/node_side_bar.js' %}"></script>
