--- a/templates/components/node_side_bar.html
+++ b/templates/components/node_side_bar.html
@@ -26,8 +26,10 @@
         <div
           data-active="false"
           id="nsb_proficiency_menu"
-          class="absolute top-full right-0 left-0 text-base bg-foreground translate-y-2 rounded-md origin-top text-left scale-y-0 transition-transform duration-150">
-          <ul class="p-2 select-none">
+          class="absolute top-full right-0 left-0 text-base bg-background translate-y-2 rounded-md origin-top text-left scale-y-0 transition-transform duration-150">
+          <ul  
+            id="nsb_proficiency_list"
+            class="p-2 select-none">
             <li>Aiming to Learn</li>
           </ul>
         </div>
