--- a/templates/components/project_list.html
+++ b/templates/components/project_list.html
@@ -19,7 +19,7 @@ border-gray-600 rounded-lg m-1.5 overflow-y-auto">
     </div>
     <div class="projectListCardsContainer mt-3">
         {% for experience in experiences %}
-            {% include "components\project_list_card.html" with project=experience %}
+            {% include "components/project_list_card.html" with project=experience %}
         {% endfor %}
     </div>
 </div>
